feat: add EVM support with wagmi, RainbowKit and slpx-sdk
- Install EVM dependencies (wagmi, viem, @rainbow-me/rainbowkit, slpx-sdk)
- Add config files for contracts, ABIs, and wagmi
- Update main.tsx with WagmiProvider, QueryClientProvider, RainbowKitProvider
- Create EVM hooks: useMintEVM, useRedeemEVM, useBalancesEVM
- Add .env.example configuration for WalletConnect
- Add EVM_MIGRATION_GUIDE.md for component migration instructions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# Bifrost Network Configuration
+# ============================================
+# Bifrost Polkadot Network Configuration
+# (Used in main branch)
+# ============================================
 VITE_BIFROST_RPC_URL=wss://bifrost-rpc.liebi.com/ws
 
 # Application Configuration
@@ -7,3 +10,17 @@ VITE_APP_NAME="Bifrost Flow"
 # Leave unset to use the baked-in Liebi/Radium fallback list.
 # Example: pin the HK node for low latency during demos.
 # VITE_BIFROST_RPC=wss://hk.p.bifrost-rpc.liebi.com/ws
+
+# ============================================
+# EVM Network Configuration
+# (Used in evm branch)
+# ============================================
+
+# WalletConnect Project ID (required for RainbowKit)
+# Get one at https://cloud.walletconnect.com/
+VITE_WALLETCONNECT_PROJECT_ID=
+
+# Optional: Custom RPC URLs (leave empty to use public RPCs)
+# VITE_RPC_URL_ARBITRUM_SEPOLIA=
+# VITE_RPC_URL_BASE_SEPOLIA=
+# VITE_RPC_URL_SEPOLIA=
