--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@polkadot/api": "^16.4.9",
     "@polkadot/extension-dapp": "^0.62.3",
+    "@rainbow-me/rainbowkit": "2.2.5",
+    "@tanstack/react-query": "5.76.1",
     "buffer": "^6.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "slpx-sdk": "0.0.16",
+    "viem": "~2.38.5",
+    "wagmi": "^2.19.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
